<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_link_man_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.mysocialapp.fragment.LinkManFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:minHeight="30dp"
        android:text="@string/plist"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_new_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newFriend"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_group_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/groupChart"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_public_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/publicNumber"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="10dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <ExpandableListView
            android:id="@+id/elv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:childDivider="#E8E8E8"
            android:divider="#E8E8E8"
            android:dividerHeight="1dp"
            android:groupIndicator="@null" />
    </LinearLayout>

</LinearLayout>
