<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/denglubeijing"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.administrator.mysocialapp.act.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/shezhang" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="5dp"
                android:src="@drawable/login_user" />

            <EditText
                android:id="@+id/userName_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_margin="5dp"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/chat_login_password_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:button="@drawable/password_checkbox" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_b_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/login_btn"
        android:padding="10dp"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_b_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/register_btn"
        android:padding="10dp"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</LinearLayout>
