<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_private_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.mysocialapp.act.PrivateMessageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp">

        <TextView
            android:id="@+id/private_message_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/private_message_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/tab_mine_no" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/private_message_lv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1.80"
        android:fastScrollEnabled="true"
        android:listSelector="#00000000"
        android:overScrollMode="never"
        android:scrollbars="none" />
    <!-- android:overScrollMode="never"  去掉消息列表上下滑动的阴影 -->
    <!-- android:listSelector="#00000000"  设置为透明 -->
    <!-- android:listSelector="#ff000000"  设置为不透明 -->
    <!-- android:scrollbars="none"  滚动条消失 -->
    <!-- android:fadeScrollbars="true"  自动显示隐藏滚动条 -->
    <!-- scrollbars 与 fadeScrollbars 二选一 -->
    <!-- android:fastScrollEnabled="true"  设置属性快速滑动 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!-- ems:宽度 -->

        <EditText
            android:id="@+id/private_message_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8sp"
            android:background="@drawable/buttensend"
            android:ems="13" />

        <Button
            android:id="@+id/private_message_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/picture" />

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/photo" />

        <Button
            android:id="@+id/btn_luX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/luX" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privateMessage_bottom_fragment_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
</LinearLayout>
